<resources>
    <string name="app_name">EntryTicketSales</string>
    <string name="user_name">User Name</string>
    <string name="email">yours@gmail.com</string>
    <string name="txt_title">Buy Tickets</string>
    <string name="header">W E L C O M E</string>
    <string name="header_one">Please sign up to join us</string>
    <string name="go_to_pick_up">Go to pick up</string>
    <string name="error">Error</string>
    <string name="invalid_email">Your email is invalid.Please try again!</string>
    <string name="locations">Locations</string>
    <string name="entry_ticket_price">Entry ticket Price</string>
    <string name="price_unit">mmk</string>
    <string name="qty">Qty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
