<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            app:fontFamily="@font/google_sans"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_one"
            app:fontFamily="@font/google_sans"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:textColor="@android:color/white"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/white_rounded_shape_background">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/holo_blue"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="30dp"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_shape"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:hint="@string/user_name"
            app:fontFamily="@font/google_sans"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@+id/tvTitle"
            android:singleLine="true"
            android:drawableRight="@drawable/ic_person"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/edit_text_shape"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            app:fontFamily="@font/google_sans"
            android:textSize="14sp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_below="@+id/etUserName"
            android:singleLine="true"
            android:drawableRight="@drawable/ic_email"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/go_to_pick_up"
            android:textSize="14sp"
            app:fontFamily="@font/google_sans"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:layout_below="@+id/etEmail"
            android:layout_centerInParent="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:textColor="@android:color/white"
            android:imeOptions="actionDone"
            android:background="@drawable/blue_rounded_shape_background"/>
    </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>